# django_deploy

./: .env.template  Dockerfile  pyproject.toml
mysite/mysite/: settings.py
