[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["KhozainKKL <98160111+KhozainKKL@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-filter = "^23.5"
django-debug-toolbar = "^4.3.0"
pillow = "^10.2.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
